--- a/Progetto/LSMT/LSMT.ipynb
+++ b/Progetto/LSMT/LSMT.ipynb
@@ -18,54 +18,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2a5896be",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import glob\n",
     "import os\n",
     "import gc\n",
+    "import joblib\n",
     "from collections import Counter\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57ad8acf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File di Training: 16\n",
-      "File di Validazione: 4\n",
-      "File di Test: 4\n",
-      "\n",
-      "Primo file di Train: blocco_000-segmentato.parquet\n",
-      "Primo file di Val: blocco_016-segmentato.parquet\n",
-      "Primo file di Test: blocco_020-segmentato.parquet\n"
-     ]
-    }
-   ],
-   "source": [
-    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset'\n",
-    "all_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
     "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Input, LSTM, Dense, TimeDistributed, RepeatVector\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "\n",
+    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset' \n",
+    "SCALER_PATH = 'scaler.joblib' \n",
+    "COLONNE_FEATURES = ['Latitude', 'Longitude', 'SOG', 'COG']\n",
+    "\n",
+    "WINDOW_SIZE = 30  \n",
+    "BATCH_SIZE = 64   \n",
+    "\n",
+    "all_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
     "TRAIN_FILES = all_files[0:16]\n",
     "VAL_FILES = all_files[16:20]\n",
-    "TEST_FILES = all_files[20:24]\n",
-    "print(f\"File di Training: {len(TRAIN_FILES)}\")\n",
-    "print(f\"File di Validazione: {len(VAL_FILES)}\")\n",
-    "print(f\"File di Test: {len(TEST_FILES)}\")\n",
+    "TEST_FILES = all_files[20:24] \n",
     "\n",
-    "print(f\"\\nPrimo file di Train: {os.path.basename(TRAIN_FILES[0])}\")\n",
-    "print(f\"Primo file di Val: {os.path.basename(VAL_FILES[0])}\")\n",
-    "print(f\"Primo file di Test: {os.path.basename(TEST_FILES[0])}\")"
+    "print(\"Configurazione caricata.\")\n",
+    "print(f\"Window Size: {WINDOW_SIZE}, Batch Size: {BATCH_SIZE}\")"
    ]
   },
   {
@@ -133,8 +118,6 @@
     }
    ],
    "source": [
-    "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset' \n",
-    "\n",
     "all_files = sorted(glob.glob(os.path.join(INPUT_DIR, '*.parquet')))\n",
     "\n",
     "if len(all_files) == 0:\n",
@@ -216,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "28d81766",
    "metadata": {},
    "outputs": [
@@ -224,26 +207,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Processando file 1/16: blocco_000-segmentato.parquet...\n",
-      "  Processando file 2/16: blocco_001-segmentato.parquet...\n",
-      "  Processando file 3/16: blocco_002-segmentato.parquet...\n",
-      "  Processando file 4/16: blocco_003-segmentato.parquet...\n",
-      "  Processando file 5/16: blocco_004-segmentato.parquet...\n",
-      "  Processando file 6/16: blocco_005-segmentato.parquet...\n",
-      "  Processando file 7/16: blocco_006-segmentato.parquet...\n",
-      "  Processando file 8/16: blocco_007-segmentato.parquet...\n",
-      "  Processando file 9/16: blocco_008-segmentato.parquet...\n",
-      "  Processando file 10/16: blocco_009-segmentato.parquet...\n",
-      "  Processando file 11/16: blocco_010-segmentato.parquet...\n",
-      "  Processando file 12/16: blocco_011-segmentato.parquet...\n",
-      "  Processando file 13/16: blocco_012-segmentato.parquet...\n",
-      "  Processando file 14/16: blocco_013-segmentato.parquet...\n",
-      "  Processando file 15/16: blocco_014-segmentato.parquet...\n",
-      "  Processando file 16/16: blocco_015-segmentato.parquet...\n",
+      "Processando file 1/16: blocco_000-segmentato.parquet\n",
+      "Processando file 2/16: blocco_001-segmentato.parquet\n",
+      "Processando file 3/16: blocco_002-segmentato.parquet\n",
+      "Processando file 4/16: blocco_003-segmentato.parquet\n",
+      "Processando file 5/16: blocco_004-segmentato.parquet\n",
+      "Processando file 6/16: blocco_005-segmentato.parquet\n",
+      "Processando file 7/16: blocco_006-segmentato.parquet\n",
+      "Processando file 8/16: blocco_007-segmentato.parquet\n",
+      "Processando file 9/16: blocco_008-segmentato.parquet\n",
+      "Processando file 10/16: blocco_009-segmentato.parquet\n",
+      "Processando file 11/16: blocco_010-segmentato.parquet\n",
+      "Processando file 12/16: blocco_011-segmentato.parquet\n",
+      "Processando file 13/16: blocco_012-segmentato.parquet\n",
+      "Processando file 14/16: blocco_013-segmentato.parquet\n",
+      "Processando file 15/16: blocco_014-segmentato.parquet\n",
+      "Processando file 16/16: blocco_015-segmentato.parquet\n",
       "\n",
       "Adattamento completato su tutti i 16 file di training.\n",
       "\n",
-      "✅ SUCCESSO! Scaler (fittato su TUTTO il training set) salvato come 'scaler.joblib'.\n"
+      "Scaler salvato come 'scaler.joblib'.\n"
      ]
     }
    ],
@@ -257,7 +240,7 @@
     "    \n",
     "    for i, file_path in enumerate(TRAIN_FILES):\n",
     "        \n",
-    "        print(f\"  Processando file {i+1}/{len(TRAIN_FILES)}: {os.path.basename(file_path)}...\")\n",
+    "        print(f\"Processando file {i+1}/{len(TRAIN_FILES)}: {os.path.basename(file_path)}\")\n",
     "        \n",
     "        df_chunk = pd.read_parquet(file_path, columns=COLONNE_DA_NORMALIZZARE)\n",
     "        \n",
@@ -274,6 +257,333 @@
     "\n",
     "except Exception as e:\n",
     "    print(f\"\\n Errore durante la preparazione dello scaler: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e2fb059",
+   "metadata": {},
+   "source": [
+    "#### Funzioni del Data Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c20ffe8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_steps_per_epoch(file_paths, window_size, batch_size):\n",
+    "    \"\"\"\n",
+    "    Scansiona tutti i file in modo efficiente (RAM-safe) per calcolare\n",
+    "    il numero totale di finestre (campioni) che verranno generate,\n",
+    "    e da lì calcola il numero di \"steps\" (batch) per epoca.\n",
+    "    Usa il metodo Counter.update(Series) che sappiamo funzionare.\n",
+    "    \"\"\"\n",
+    "    print(f\"--- Calcolo Steps per {len(file_paths)} file ---\")\n",
+    "    \n",
+    "    total_lengths = Counter()\n",
+    "    \n",
+    "    # FASE 1: Trova le lunghezze di tutte le 4.3M traiettorie\n",
+    "    for i, file_path in enumerate(file_paths):\n",
+    "        print(f\"  Scansione lunghezze file {i+1}/{len(file_paths)}...\", end='\\r')\n",
+    "        try:\n",
+    "            df = pd.read_parquet(file_path, columns=['TrajectoryID'])\n",
+    "            # Metodo efficiente (provato) per aggiornare le lunghezze\n",
+    "            total_lengths.update(df['TrajectoryID'])\n",
+    "            del df\n",
+    "            gc.collect()\n",
+    "        except Exception as e:\n",
+    "            print(f\"Errore nel leggere {file_path}: {e}\")\n",
+    "\n",
+    "    print(\"\\nScansione lunghezze completata.\")\n",
+    "\n",
+    "    # FASE 2: Calcola il numero totale di finestre\n",
+    "    total_windows = 0\n",
+    "    for length in total_lengths.values():\n",
+    "        if length >= window_size:\n",
+    "            # Una traiettoria di N righe produce (N - window_size + 1) finestre\n",
+    "            total_windows += (length - window_size + 1)\n",
+    "            \n",
+    "    # FASE 3: Calcola gli steps\n",
+    "    steps = int(np.ceil(total_windows / batch_size))\n",
+    "    \n",
+    "    print(f\"Trovate {total_windows:,} finestre totali.\")\n",
+    "    print(f\"Steps per Epoca (Batch Size {batch_size}): {steps}\")\n",
+    "    print(\"------------------------------------------\")\n",
+    "    return steps\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def create_windows(data_np, window_size):\n",
+    "    \"\"\"\n",
+    "    Crea finestre mobili da un array numpy 2D.\n",
+    "    \"\"\"\n",
+    "    windows = []\n",
+    "    # Itera da 0 fino all'ultimo punto di inizio possibile\n",
+    "    for i in range(len(data_np) - window_size + 1):\n",
+    "        windows.append(data_np[i : i + window_size])\n",
+    "    return windows\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def data_generator(file_paths, scaler, features, window_size, batch_size, shuffle_files=True):\n",
+    "    \"\"\"\n",
+    "    Generatore (yield) che carica i file uno per uno, gestisce la \n",
+    "    RAM e \"cuce\" le traiettorie che si trovano a cavallo dei file.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Questo buffer tiene in memoria le \"code\" delle traiettorie\n",
+    "    # alla fine di un file, per cucirle con l'inizio del file successivo.\n",
+    "    # Formato: { 'TrajectoryID': DataFrame_coda }\n",
+    "    trajectory_buffer = {}\n",
+    "    \n",
+    "    # Questo buffer tiene le finestre pronte per essere messe in un batch\n",
+    "    window_buffer = []\n",
+    "    \n",
+    "    # Loop infinito: Keras chiamerà questo generatore più volte\n",
+    "    while True:\n",
+    "        \n",
+    "        # Opzionale: mescola l'ordine dei file ad ogni epoca\n",
+    "        if shuffle_files:\n",
+    "            np.random.shuffle(file_paths)\n",
+    "            \n",
+    "        # Itera sui file di training (o validazione)\n",
+    "        for file_path in file_paths:\n",
+    "            try:\n",
+    "                # Carica UN file in memoria\n",
+    "                df = pd.read_parquet(file_path)\n",
+    "                \n",
+    "                # Normalizza i dati USANDO LO SCALER CARICATO\n",
+    "                df[features] = scaler.transform(df[features])\n",
+    "                \n",
+    "                # Questo buffer terrà le code del file *corrente*\n",
+    "                # da passare al file successivo\n",
+    "                next_file_buffer = {}\n",
+    "\n",
+    "                # Itera sui gruppi (questo è RAM-efficiente)\n",
+    "                # Grazie all'ordinamento, i gruppi sono contigui\n",
+    "                for tid, group in df.groupby('TrajectoryID'):\n",
+    "                    \n",
+    "                    # --- 1. CUCITURA ---\n",
+    "                    # Controlla se questo ID era già nel buffer (dal file PRECEDENTE)\n",
+    "                    if tid in trajectory_buffer:\n",
+    "                        # Cucitura!\n",
+    "                        trajectory_data = pd.concat([trajectory_buffer.pop(tid), group])\n",
+    "                    else:\n",
+    "                        # Nessuna cucitura, è una nuova traiettoria\n",
+    "                        trajectory_data = group\n",
+    "                        \n",
+    "                    # --- 2. FILTRO LUNGHEZZA ---\n",
+    "                    if len(trajectory_data) < window_size:\n",
+    "                        # Troppo corta PER ORA. Mettila da parte\n",
+    "                        next_file_buffer[tid] = trajectory_data\n",
+    "                        continue # Passa al prossimo TrajectoryID\n",
+    "                        \n",
+    "                    # --- 3. CREAZIONE FINESTRE ---\n",
+    "                    # Converti in NumPy per velocità\n",
+    "                    trajectory_np = trajectory_data[features].to_numpy()\n",
+    "                    \n",
+    "                    # Crea tutte le finestre possibili da questa traiettoria\n",
+    "                    new_windows = create_windows(trajectory_np, window_size)\n",
+    "                    \n",
+    "                    # Aggiungi le finestre al buffer dei batch\n",
+    "                    window_buffer.extend(new_windows)\n",
+    "                    \n",
+    "                    # --- 4. SALVATAGGIO CODA PER PROSSIMO FILE ---\n",
+    "                    # Salva le ultime (N-1) righe. Saranno la base\n",
+    "                    # per la cucitura nel *prossimo* file.\n",
+    "                    next_file_buffer[tid] = trajectory_data.iloc[-(window_size - 1):]\n",
+    "\n",
+    "                    # --- 5. PRODUZIONE (YIELD) BATCH ---\n",
+    "                    # Abbiamo abbastanza finestre per un batch?\n",
+    "                    while len(window_buffer) >= batch_size:\n",
+    "                        \n",
+    "                        # Estrai il batch\n",
+    "                        batch_to_yield = window_buffer[:batch_size]\n",
+    "                        # Rimuovilo dal buffer\n",
+    "                        window_buffer = window_buffer[batch_size:]\n",
+    "                        \n",
+    "                        # Converti in array numpy finale\n",
+    "                        batch_np = np.array(batch_to_yield)\n",
+    "                        \n",
+    "                        # L'output (y) è uguale all'input (X)\n",
+    "                        yield (batch_np, batch_np)\n",
+    "                \n",
+    "                # Finito il file, aggiorna il buffer principale\n",
+    "                # per il *prossimo* file\n",
+    "                trajectory_buffer = next_file_buffer\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"\\nERRORE nel generatore durante la lettura di {file_path}: {e}\")\n",
+    "                # Continua con il file successivo\n",
+    "                continue\n",
+    "\n",
+    "print(\"Funzioni definite: calculate_steps_per_epoch, create_windows, data_generator\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa0ab7a",
+   "metadata": {},
+   "source": [
+    "#### Calcolo degli steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ac41e21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Avvio calcolo steps per il Training Set...\")\n",
+    "train_steps = calculate_steps_per_epoch(TRAIN_FILES, WINDOW_SIZE, BATCH_SIZE)\n",
+    "\n",
+    "print(\"\\nAvvio calcolo steps per il Validation Set...\")\n",
+    "val_steps = calculate_steps_per_epoch(VAL_FILES, WINDOW_SIZE, BATCH_SIZE)\n",
+    "\n",
+    "print(\"\\n--- Calcolo Steps Completato ---\")\n",
+    "print(f\"Training Steps per Epoca: {train_steps}\")\n",
+    "print(f\"Validation Steps per Epoca: {val_steps}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b98a059",
+   "metadata": {},
+   "source": [
+    "#### Caricamento Scaler e creazione dei Generatori"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4b71cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- B. Carica lo Scaler ---\n",
+    "print(f\"Caricamento scaler da {SCALER_PATH}...\")\n",
+    "scaler = joblib.load(SCALER_PATH)\n",
+    "\n",
+    "# --- C. Inizializza i Generatori ---\n",
+    "print(\"Inizializzazione dei generatori (oggetti pronti)...\")\n",
+    "\n",
+    "train_gen = data_generator(\n",
+    "    file_paths=TRAIN_FILES,\n",
+    "    scaler=scaler,\n",
+    "    features=COLONNE_FEATURES,\n",
+    "    window_size=WINDOW_SIZE,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle_files=True\n",
+    ")\n",
+    "\n",
+    "val_gen = data_generator(\n",
+    "    file_paths=VAL_FILES,\n",
+    "    scaler=scaler,\n",
+    "    features=COLONNE_FEATURES,\n",
+    "    window_size=WINDOW_SIZE,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    shuffle_files=False\n",
+    ")\n",
+    "\n",
+    "print(\"Generatori pronti.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3083506e",
+   "metadata": {},
+   "source": [
+    "#### Definizione Modello LSMT Autoencoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fb9e219",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- D. Definisci il Modello (LSTM Autoencoder) ---\n",
+    "\n",
+    "n_features = len(COLONNE_FEATURES)\n",
+    "latent_dim = 32 # Prova a cambiare questo iperparametro (es. 64, 128)\n",
+    "\n",
+    "# Encoder\n",
+    "inputs = Input(shape=(WINDOW_SIZE, n_features))\n",
+    "# Il primo LSTM comprime l'input\n",
+    "lstm_encoder = LSTM(latent_dim, return_sequences=False)(inputs)\n",
+    "\n",
+    "# Decoder\n",
+    "# Ripete il vettore compresso per ogni timestep\n",
+    "repeat_vector = RepeatVector(WINDOW_SIZE)(lstm_encoder)\n",
+    "# Il secondo LSTM \"legge\" il vettore compresso e ricostruisce la sequenza\n",
+    "lstm_decoder = LSTM(latent_dim, return_sequences=True)(repeat_vector)\n",
+    "# Un layer finale per rimappare all'output (n_features)\n",
+    "output = TimeDistributed(Dense(n_features))(lstm_decoder)\n",
+    "\n",
+    "model_lstm = Model(inputs, output)\n",
+    "model_lstm.compile(optimizer='adam', loss='mae') # MAE è ottimo per questo\n",
+    "\n",
+    "print(\"Modello LSTM-Autoencoder creato e compilato.\")\n",
+    "model_lstm.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "112f9710",
+   "metadata": {},
+   "source": [
+    "#### Addestramento LSMT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4c05ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- E. Avvia l'Addestramento ---\n",
+    "\n",
+    "# Definisci i Callback\n",
+    "checkpoint = ModelCheckpoint(\n",
+    "    'lstm_autoencoder_best.h5', # Salva il modello migliore\n",
+    "    monitor='val_loss',\n",
+    "    save_best_only=True,\n",
+    "    mode='min',\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "early_stopping = EarlyStopping(\n",
+    "    monitor='val_loss',\n",
+    "    patience=5, # Ferma se non migliora per 5 epoche\n",
+    "    mode='min',\n",
+    "    verbose=1,\n",
+    "    restore_best_weights=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print(f\"\\nAvvio addestramento LSTM-Autoencoder...\")\n",
+    "\n",
+    "history_lstm = model_lstm.fit(\n",
+    "    train_gen,\n",
+    "    steps_per_epoch=train_steps,\n",
+    "    epochs=50, # Metti un numero alto, EarlyStopping lo fermerà\n",
+    "    validation_data=val_gen,\n",
+    "    validation_steps=val_steps,\n",
+    "    callbacks=[checkpoint, early_stopping]\n",
+    ")\n",
+    "\n",
+    "print(\"\\nAddestramento LSTM completato.\")"
    ]
   }
  ],
