Aggiunta dei markdown per il file di addestramento della rete LSMT.

--- a/Progetto/LSMT/LSMT.ipynb
+++ b/Progetto/LSMT/LSMT.ipynb
@@ -13,12 +13,14 @@
    "id": "2d4d2742",
    "metadata": {},
    "source": [
-    "Primo step split del dataset"
+    "### Codice di Configurazione e Pre-Elaborazione per LSTM\n",
+    "Questo blocco di codice svolge due funzioni principali: prepara l'ambiente di calcolo, ottimizzando l'uso della GPU con TensorFlow, e definisce i parametri cruciali per la lettura dei dati e la costruzione del modello LSTM (Long Short-Term Memory) per la previsione \n",
+    "delle traiettorie.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2a5896be",
    "metadata": {},
    "outputs": [
@@ -93,8 +95,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4502386b",
+   "metadata": {},
+   "source": [
+    "### Pre-screening delle Traiettorie di Training e Valutazione del Timestep (Window Size)\n",
+    "Questo blocco di codice svolge una funzione di analisi preliminare critica dei dati di training. Il suo scopo principale è determinare l'usabilità delle traiettorie in funzione della dimensione della finestra temporale (Window Size o Timestep), un iperparametro cruciale per il modello LSTM.\n",
+    "Il codice segue tre fasi distinte:\n",
+    "1. **Caricamento e Preparazione dei File di Training**:\n",
+    "   il codice individua tutti i file di dati che contengono le traiettorie delle navi (i file Parquet) e ne seleziona un sottoinsieme specifico da utilizzare per il training. Quindi, definisce una lista di diverse lunghezze di finestra che vogliamo testare (ad esempio, se usiamo gli ultimi 30 punti per la previsione o gli ultimi 40).\n",
+    "   \n",
+    "2. **Misurazione delle Traiettorie**: il codice scorre l'intero set di training, identificando ogni singola traiettoria unica e,     soprattutto, contando esattamente quanti punti (o misure) essa contiene. In pratica, misura la lunghezza di ogni sequenza di navigazione.\n",
+    "\n",
+    "3. **Report di Usabilità**: il codice combina le lunghezze misurate con i timestep che vogliamo testare. Il risultato è un report statistico:\n",
+    "   * Per ogni dimensione di finestra (ad esempio, 30 punti), il codice calcola quante traiettorie sono abbastanza lunghe (almeno 30 punti) e quindi utilizzabili per l'addestramento.\n",
+    "\n",
+    "   * Conseguentemente, calcola quante traiettorie sono troppo corte e devono essere scartate per quella specifica configurazione.\n",
+    " \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "80885758",
    "metadata": {},
    "outputs": [
@@ -202,7 +224,7 @@
    "source": [
     "### Normalizzazione\n",
     "\n",
-    "Passaggio fondamentale perchè le tue reti neurali (LSTM/LNN) faticano a imparare quando i dati di input hanno scale completamente diverse. Ad esempio, la colonna COG (rotta) va da 0 a 360, mentre la colonna SOG (velocità) potrebbe andare da 0 a 50. Questi intervalli così diversi \"confondono\" la rete durante l'addestramento.\n",
+    "Passaggio fondamentale perchè le reti neurali (LSTM/LNN) faticano a imparare quando i dati di input hanno scale completamente diverse. Ad esempio, la colonna COG (rotta) va da 0 a 360, mentre la colonna SOG (velocità) potrebbe andare da 0 a 50. Questi intervalli così diversi \"confondono\" la rete durante l'addestramento.\n",
     "Dobbiamo quindi standardizzarli, portando tutte le colonne a una scala simile.  \n",
     "Il modo corretto per standardizzare è calcolare la media e la deviazione standard dell'intero set di addestramento (tutti i 4.3 milioni di traiettorie nei tuoi 16 file). Ovviamente, questi dati sono troppo grandi per essere caricati tutti insieme in memoria.\n",
     "\n",
@@ -279,7 +301,34 @@
    "id": "5e2fb059",
    "metadata": {},
    "source": [
-    "#### Funzioni del Data Generator"
+    "#### Funzioni del Data Generator\n",
+    "Questo insieme di funzioni costituisce il motore di preparazione dei dati per l'addestramento della rete neurale LSTM, risolvendo il problema di addestrare un modello su milioni di punti di dati (traiettorie) con una memoria di sistema limitata.\n",
+    "\n",
+    "1. **Funzione di Calcolo Passi per Epoca** *(calculate_steps_per_epoch)*\n",
+    "Quando si addestra una rete neurale, è necessario sapere esattamente quanti step (ovvero, quanti batch di dati) compongono un'epoca completa. Questa funzione svolge questo compito in modo sicuro e robusto:\n",
+    "\n",
+    "   * **Conteggio Sicuro:** La funzione scansiona tutti i file di dati leggendo solo l'ID di ogni traiettoria e contandone la lunghezza, esattamente come nell'analisi precedente. Questo è un processo efficiente in termini di RAM perché non carica tutte le colonne in memoria.\n",
+    "\n",
+    "   * **Calcolo delle Finestre:** Per ogni traiettoria la cui lunghezza supera la WINDOW_SIZE (la lunghezza di input richiesta dall'LSTM), calcola il numero esatto di finestre temporali che possono essere estratte (una traiettoria lunga 100 punti può generare 100 - WINDOW_SIZE + 1 finestre).\n",
+    "\n",
+    "   * **Determinazione degli Steps:** Infine, divide il numero totale di finestre (campioni) per la BATCH_SIZE (il numero di campioni elaborati per volta dalla GPU). Il risultato è il numero preciso di steps per epoca che la funzione di training di Keras dovrà eseguire.\n",
+    "\n",
+    "   Questa precisione è cruciale: se il numero di steps è errato, l'addestramento si blocca o non copre l'intero dataset, compromettendo l'apprendimento.\n",
+    "\n",
+    "2. **Generatore di Dati Efficace** *(data_generator_v)*\n",
+    "Poiché il dataset delle traiettorie è troppo grande per stare nella RAM, non possiamo usare i metodi di caricamento standard. È necessario un Data Generator che agisca come una *fabbrica di dati just-in-time*\n",
+    "\n",
+    "   * **Lettura Chunkizzata e Sequenziale:** Il generatore legge i file di dati Parquet in piccoli blocchi (CHUNK_SIZE_ROWS) anziché tutto in una volta. Questo assicura che il carico di memoria rimanga basso. \n",
+    "\n",
+    "   * **Gestione delle Traiettorie a Cavallo:** La sfida principale è che una singola traiettoria può estendersi su più blocchi di dati (chunk) o addirittura su più file. Il generatore utilizza dei buffer temporanei (chunk_buffer e file_buffer) per memorizzare i dati parziali di una traiettoria finché non è completa, garantendo che nessuna sequenza venga interrotta o persa.\n",
+    "\n",
+    "   * **Creazione delle Finestre:** Per ogni traiettoria completa, la funzione interna *create_windows* estrae tutte le finestre temporali di dimensione WINDOW_SIZE che possono essere generate.\n",
+    "\n",
+    "   * **Normalizzazione e Yield:**\n",
+    "\n",
+    "     1. I dati estratti vengono immediatamente normalizzati usando lo scaler pre-calcolato (portandoli sulla scala media 0, deviazione standard 1).\n",
+    "\n",
+    "     2. Quando il generatore ha abbastanza finestre per riempire un BATCH_SIZE, le impacchetta e le fornisce alla rete neurale tramite l'istruzione yield.\n"
    ]
   },
   {
@@ -502,7 +551,33 @@
    "id": "3083506e",
    "metadata": {},
    "source": [
-    "#### Definizione Modello LSMT Autoencoder"
+    "#### Definizione Modello LSMT Autoencoder\n",
+    "Questa parte del codice descrive la costruzione della rete neurale vera e propria che sarà utilizzata per apprendere e, successivamente, rilevare le anomalie nelle traiettorie delle navi. Il modello implementato è un Autoencoder Sequenziale basato su unità LSTM (Long Short-Term Memory).\n",
+    "L'obiettivo di un Autoencoder è imparare una rappresentazione compressa dei dati (il vettore latente) e poi ricostruire l'input originale dall'output.\n",
+    "\n",
+    "1. La Fase di Codifica **(Encoder)**\n",
+    "\n",
+    "   * **Input:** La rete accetta come input una finestra temporale (WINDOW_SIZE) con le nostre caratteristiche (**n_features**: Latitudine, Longitudine, SOG, COG).\n",
+    "\n",
+    "   * **LSTM Encoder:** Lo strato LSTM prende la sequenza completa e la comprime. L'impostazione **return_sequences=False** è cruciale: significa che l'LSTM non restituisce una sequenza completa, ma solo l'ultimo stato nascosto. Questo stato è il vettore latente (latent_dim = 32), che rappresenta la versione compressa e concettuale dell'intera traiettoria di input.\n",
+    "\n",
+    "2. La Fase di Decodifica **(Decoder)**\n",
+    "\n",
+    "   * **Repeat Vector:** Il vettore latente (la rappresentazione compressa) viene replicato lungo l'asse temporale per la lunghezza originale della finestra (WINDOW_SIZE). Questo \"spalma\" l'informazione compressa per prepararla alla decodifica.\n",
+    "\n",
+    "   * **LSTM Decoder:** Un secondo strato LSTM riceve il vettore replicato. Questa volta, **return_sequences=True** indica che deve generare una sequenza completa. Il suo compito è \"srotolare\" il vettore latente e ricostruire la sequenza temporale di output punto per punto.\n",
+    "\n",
+    "   * **TimeDistributed Dense:** Il layer finale *Dense* è applicato in modo indipendente a ogni singolo punto temporale dell'output del decoder. Questo rimappa i risultati interni dell'LSTM ricostruendo le quattro caratteristiche originali **(n_features)**.\n",
+    "\n",
+    "3. **Compilazione del Modello**\n",
+    "\n",
+    "   * **Definizione del Modello:** *Model(inputs, output)* unisce l'encoder e il decoder in un'unica architettura end-to-end.\n",
+    "\n",
+    "   * **Ottimizzatore (*adam*):** L'algoritmo *Adam* è scelto per l'ottimizzazione del peso del modello, noto per la sua efficacia e velocità.\n",
+    "\n",
+    "   * **Funzione di Loss** *(loss='mae')*: Viene utilizzata la **Mean Absolute Error (MAE)**. Questa funzione calcola la differenza media assoluta tra la sequenza di traiettoria di input e la sequenza ricostruita in output. Il modello cercherà di minimizzare questo **MAE** durante l'addestramento, imparando a ricostruire le sequenze normali con l'errore più basso possibile.\n",
+    "  \n",
+    "\n"
    ]
   },
   {
@@ -650,7 +725,28 @@
    "id": "112f9710",
    "metadata": {},
    "source": [
-    "#### Addestramento LSMT"
+    "#### Addestramento LSMT\n",
+    "1. **Definizione dei Parametri di Training Ottimali**\n",
+    "Prima di iniziare, vengono stabiliti i parametri di dimensione dell'epoca basati su test preliminari eseguiti sulla GPU RTX 4050:\n",
+    "\n",
+    "   * **STEPS_PER_EPOCH_CALCOLATI (200.000):** Questo valore, ottenuto da analisi di benchmark sulla GPU (come la funzione calculate_steps_per_epoch discussa precedentemente), definisce la quantità di dati che il modello deve vedere per completare un'epoca. Questo numero è stato specificamente calibrato per far sì che ogni epoca duri circa 30 minuti, ottimizzando l'uso delle risorse GPU.\n",
+    "\n",
+    "   * **VALIDATION_STEPS_CALCOLATI (40.000):** Definisce quanti batch di dati di validazione verranno utilizzati al termine di ogni epoca per valutare le prestazioni su dati non visti.\n",
+    "\n",
+    "2. **Impostazione dei Callback per un Addestramento Robusto**\n",
+    "\n",
+    "   * **ModelCheckpoint (Salvataggio del Modello Migliore):** Monitora la val_loss (errore di ricostruzione sul set di validazione). Il suo compito è salvare il modello solo quando si verifica un miglioramento della performance. Questo garantisce che, anche se l'addestramento continua, si mantenga sempre la versione migliore del modello in lstm_autoencoder_best.keras.\n",
+    "\n",
+    "   * **EarlyStopping (Interruzione Anticipata):** Agisce come un meccanismo di sicurezza. Monitora anch'esso la val_loss e, se non rileva alcun miglioramento per un certo numero di epoche (patience=5), interrompe l'addestramento in anticipo. Questo è cruciale per prevenire l'overfitting (quando il modello impara troppo a memoria i dati di training) e per risparmiare tempo e risorse di calcolo.\n",
+    "\n",
+    "   * **CSVLogger:** Registra i dettagli dell'addestramento (come la loss e la validation loss di ogni epoca) in un file training_log.csv. Questo permette di analizzare le prestazioni e tracciare le curve di apprendimento anche dopo la fine del processo.\n",
+    "\n",
+    "3. **Avvio del Processo di Addestramento (model_lstm.fit)**\n",
+    "   * **Dati:** Riceve i generatori di dati (train_gen e val_gen), che forniscono continuamente batch di dati normalizzati direttamente dalla memoria di massa, evitando problemi di RAM.\n",
+    "\n",
+    "   * **Epoche:** Sebbene siano impostate 50 epoche, l'addestramento si affiderà all'EarlyStopping per fermarsi non appena la performance sul set di validazione smette di migliorare.\n",
+    "\n",
+    "   * **Controllo:** Tutti i callbacks definiti sono attivati per supervisionare e gestire il processo."
    ]
   },
   {
